--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tehtävälistat",
-  "name": "Create React App Sample",
+  "name": "Tehtävälistasovellus",
   "icons": [
     {
       "src": "favicon.ico",
@@ -15,17 +15,18 @@
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     },
     {
-      "src": "maskable_icon_x512.png",
+      "src": "maskable512.png",
       "type": "image/png",
       "sizes":"512x512",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#2f4f4f",
-  "background_color": "#ffffff"
+  "background_color": "#2f4f4f"
 }
