--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {  
+    "node": "16.17.0"  
+  },
   "name": "todo2",
   "version": "1.0.0",
   "description": "Todo app for home stuff",
@@ -6,7 +9,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "cross-env NODE_ENV=developement nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm install && npm run build"
   },
   "author": "Ilari Rauhala",
   "license": "ISC",
