--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,4 +1,13 @@
 {
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "rules": {
+    // suppress errors for missing 'import React' in files
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off"
+  },
   "settings": {
     "import/resolver": {
       "node": {
