--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,4 +1,7 @@
 {
+  "plugins": [
+    "react"
+  ],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended"
@@ -6,7 +9,26 @@
   "rules": {
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/jsx-indent": [
+      "warn",
+      2
+    ],
+    "react/jsx-max-props-per-line": [
+      "warn",
+      {
+        "maximum": 1,
+        "when": "multiline"
+      }
+    ],
+    "react/jsx-indent-props": [
+      "error",
+      2
+    ],
+    "react/jsx-first-prop-new-line": [
+      "warn",
+      "multiline-multiprop"
+    ]
   },
   "settings": {
     "import/resolver": {
