--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "@vitejs/plugin-react": "3.1.0",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-import": "^2.27.5",
